tests/paczka1/fuzzy1/29130228.err
Error in line 20: WwQ5 S85 36,0
Error in line 26: A408 A455 17,4
Error in line 29: A408 S85 3,8
Error in line 21: xaf5RP7 A408 97,1
Error in line 35: lyeYpI31P1D S85 40,3
